@@ -62,6 +62,7 @@ void         exif_content_foreach_entry (ExifContent *content,
 					 void *user_data);
 
 /* For your convenience */
+ExifIfd exif_content_get_ifd (ExifContent *);
 #define exif_content_get_value(c,t,v,m)					\
 	(exif_content_get_entry (c,t) ?					\
 	 exif_entry_get_value (exif_content_get_entry (c,t),v,m) : NULL)
